# FlavorLineTool

./: .gitignore  README.md  main.py  pyproject.toml
flavor/: __init__.py  api.py  cli.py  config.py  hackatime.py
flavor/commands/: __init__.py  cookies.py  lists.py  login.py  projects.py  search.py  times.py
