[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flavorlinetool"
version = "0.1.0"
description = "A cli app for tracking cookies and interacting with the Flavortown API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
flavor = "flavor.cli:main"